feat: endpoint de consulta de estatisticas por estado
