# server/api/controllers/estatisticas/router.ts
@@ -4,4 +4,5 @@ import controller from './controller';
 export default Router()
   .get('/municipios/', controller.findMunicipios)
   .get('/municipios/:municipio', controller.getEstatisticasMunicipios)
-  .get('/estados/', controller.findEstados);
+  .get('/estados/', controller.findEstados)
+  .get('/estados/:estado', controller.getEstatisticasEstados);
